Closed Bug 843940 Opened 12 years ago Closed 12 years ago

Valgrind warns about jumps due to an uninitialized member in mozilla::layers::Transaction that lacks a constructor

Categories

(Core :: Widget, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: bent.mozilla, Assigned: nrc)

References

Details

Attachments

(1 file)

Bug 776217 added an mTargetRotation member to mozilla::layers::Transaction and never initialized it. Valgrind warns that we're making decisions based on that uninitialized value. ==18180== Conditional jump or move depends on uninitialised value(s) ==18180== at 0x62647B7: mozilla::layers::ShadowLayerForwarder::BeginTransaction(nsIntRect const&, mozilla::ScreenRotation, nsIntRect const&, unsigned int) (ShadowLayers.cpp:51) ==18180== by 0x623A548: mozilla::layers::BasicShadowLayerManager::BeginTransactionWithTarget(gfxContext*) (BasicLayerManager.cpp:1108) ==18180== by 0x5748664: PresShell::Paint(nsView*, nsRegion const&, unsigned int) (nsPresShell.cpp:5391) ==18180== by 0x5A499B9: nsViewManager::ProcessPendingUpdatesForView(nsView*, bool) (nsViewManager.cpp:400) ==18180== by 0x5A49ABA: nsViewManager::WillPaintWindow(nsIWidget*) (nsViewManager.cpp:621) ==18180== by 0x5A48008: nsView::WillPaintWindow(nsIWidget*) (nsView.cpp:960) ==18180== by 0x5F0C72A: mozilla::widget::PuppetWidget::Paint() (PuppetWidget.cpp:552) ==18180== by 0x5F0C8B5: mozilla::widget::PuppetWidget::PaintTask::Run() (PuppetWidget.cpp:594) ==18180== by 0x61D0261: nsThread::ProcessNextEvent(bool, bool*) (nsThread.cpp:627) ==18180== by 0x61A2C1D: NS_ProcessNextEvent_P(nsIThread*, bool) (nsThreadUtils.cpp:238) ==18180== by 0x5FB0626: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) (MessagePump.cpp:82) ==18180== by 0x61F2F5B: MessageLoop::Run() (message_loop.cc:208)
Assignee: nobody → ncameron
The offending branch was only added in bug 796722.
Blocks: 796722
No longer blocks: 776217
Attachment #718205 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: