Bug 843940; Initialise Transaction::mRotationChanged. r=roc